fix(button): text alignment and using rem for padding

--- a/packages/styles/scss/components/button/_button.scss
+++ b/packages/styles/scss/components/button/_button.scss
@@ -368,6 +368,7 @@
     width: 100%;
     // 196px from design kit
     max-width: rem(196px);
+    align-items: flex-start;
 
     &:not(:focus) {
       box-shadow: rem(-1px) 0 0 0 $button-separator;
